# stage-2-fuzzylabs-raisin-logreg-from-scratch-Kamil

./: .dockerignore  .gitignore  Makefile  README.md  dockerfile  pyproject.toml  testing.ipynb  to_add.txt
app/: __init__.py  load.py  model.py  predict.py  server.py  train.py  utils.py
app/eval/: cv.py  functions.py
archive/: README.md  README_2.md
k8s/: deploymnet.yaml  service.yaml
tests/: conftest.py  test_inference.py  test_model.py
